--- a/package.json
+++ b/package.json
@@ -3,19 +3,52 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --tunnel",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest "
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.3.6",
     "expo": "~48.0.11",
-    "expo-status-bar": "~1.4.4",
+    "expo-font": "~11.1.1",
+    "expo-linear-gradient": "~12.1.2",
+    "expo-status-bar": "^1.4.4",
+    "jest": "^29.2.1",
+    "jest-expo": "^48.0.2",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-dom": "18.2.0",
+    "react-native": "0.71.6",
+    "react-native-dotenv": "^3.4.8",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/react-native": "^12.1.1",
+    "autoprefixer": "^10.4.14",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "postcss": "^8.4.23",
+    "react-test-renderer": "^18.2.0",
+    "tailwindcss": "^3.3.1"
   },
   "private": true
 }
