--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-app-loading": "^2.1.1",
     "expo-blur": "~14.0.1",
     "expo-calendar": "~14.0.6",
+    "expo-checkbox": "~4.0.1",
     "expo-font": "~13.0.2",
     "expo-image-picker": "~16.0.4",
     "expo-linear-gradient": "~14.0.1",
