--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "expo-app-loading": "^2.1.1",
     "expo-blur": "~14.0.1",
     "expo-calendar": "~14.0.6",
-    "expo-checkbox": "~4.0.1",
     "expo-font": "~13.0.2",
     "expo-image-picker": "~16.0.4",
     "expo-linear-gradient": "~14.0.1",
@@ -40,6 +39,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-calendars": "^1.1306.0",
+    "react-native-check-box": "^2.1.7",
     "react-native-dotenv": "^3.4.8",
     "react-native-fast-image": "^8.6.3",
     "react-native-pager-view": "6.5.1",
