--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-check-box": "^2.1.7",
     "react-native-dotenv": "^3.4.8",
     "react-native-fast-image": "^8.6.3",
+    "react-native-flatlist-alphabet": "^1.1.2",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
