--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --tunnel",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest "
   },
@@ -18,6 +18,10 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-firebase/app": "^21.13.0",
+    "@react-native-firebase/auth": "^21.13.0",
+    "@react-native-firebase/crashlytics": "^21.13.0",
+    "@react-native-firebase/database": "^21.13.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.6",
@@ -26,10 +30,12 @@
     "expo": "^52.0.0",
     "expo-app-loading": "^2.1.1",
     "expo-blur": "~14.0.1",
+    "expo-build-properties": "^0.13.2",
     "expo-calendar": "~14.0.6",
     "expo-font": "~13.0.2",
     "expo-image-picker": "~16.0.4",
     "expo-linear-gradient": "~14.0.1",
+    "expo-modules-autolinking": "^2.0.8",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "jest": "^29.2.1",
@@ -48,7 +54,8 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "expo-dev-client": "~5.0.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
