--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "e_invite",
+  "name": "tixxy",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -32,6 +32,7 @@
     "expo-blur": "~14.0.1",
     "expo-build-properties": "^0.13.2",
     "expo-calendar": "~14.0.6",
+    "expo-dev-client": "~5.0.19",
     "expo-font": "~13.0.2",
     "expo-image-picker": "~16.0.4",
     "expo-linear-gradient": "~14.0.1",
@@ -48,14 +49,14 @@
     "react-native-check-box": "^2.1.7",
     "react-native-dotenv": "^3.4.8",
     "react-native-fast-image": "^8.6.3",
+    "react-native-fbsdk-next": "^13.4.1",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-web": "~0.19.13",
-    "expo-dev-client": "~5.0.19"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
