--- a/package.json
+++ b/package.json
@@ -29,27 +29,23 @@
     "@react-navigation/native-stack": "^6.9.12",
     "axios": "^1.3.6",
     "expo": "^52.0.0",
-    "expo-app-loading": "^2.1.1",
-    "expo-blur": "~14.0.1",
+    "expo-blur": "14.0.3",
     "expo-build-properties": "^0.13.2",
     "expo-calendar": "~14.0.6",
     "expo-dev-client": "~5.0.19",
     "expo-font": "~13.0.2",
-    "expo-image-picker": "~16.0.4",
-    "expo-linear-gradient": "~14.0.1",
-    "expo-modules-autolinking": "^2.0.8",
-    "expo-splash-screen": "~0.29.18",
-    "expo-status-bar": "~2.0.0",
+    "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-splash-screen": "~0.29.24",
+    "expo-status-bar": "~2.0.1",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.2",
+    "jest-expo": "~52.0.6",
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.9",
     "react-native-calendars": "^1.1306.0",
-    "react-native-check-box": "^2.1.7",
     "react-native-dotenv": "^3.4.8",
-    "react-native-fast-image": "^8.6.3",
     "react-native-fbsdk-next": "^13.4.1",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
@@ -57,7 +53,9 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "@expo/config-plugins": "~9.0.0",
+    "@expo/prebuild-config": "^8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
